--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
     <h1>teste de pagina</h1>
     <h2>teste de mudança na branch develop</h2>
     <h3>estou na branch feature_01 - testando novas realidades.</h3>
+    <h4>estou na branch feature_02 </h4>
 </body>
 </html>
