enviando alteração das linhas 15 e 17

--- a/index.html
+++ b/index.html
@@ -11,5 +11,9 @@
     <h2>teste de mudança na branch develop</h2>
     <h3>estou na branch feature_01 - testando novas realidades.</h3>
     <h4>terceira alteração</h4>
+
+    <h5> nova alteração</h5>
+
+    <h6> mudança </h6>
 </body>
 </html>
